--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,5 @@ tmp/
 # ignore .zip files in the root directory, but not in subdirectories
 # this allows us to ignore submission archives, but not the data files
 /*.zip
+*.mp4
+*.png
